# ComputacaoGrafica

./: README.md  Result.md
GB_TrabalhoFinal/: GB_TrabalhoFinal.sln  REQUISITOS_ATIVIDADE.txt
GB_TrabalhoFinal/Exericio/: .clang-format  CMakeLists.txt  Camera.h  Exericio.vcxproj  Exericio.vcxproj.filters  Mesh.cpp  Mesh.h  Origem.cpp  config.txt
GB_TrabalhoFinal/models_archives/suzanne_model/: suzanneTriLowPoly.mtl
GB_TrabalhoFinal/shaders_archives/: Shader.fs  Shader.vs  crosshair.fs  crosshair.vs
Hello3D/Exericio8/: Origem.cpp
M1_Hello3D/: M1_Hello3D.sln
M1_Hello3D/Exericio/: Exericio.vcxproj  Origem.cpp  Result.md
M2_Cubes/: M2_Cubes.sln
M2_Cubes/Exericio/: Exericio.vcxproj  Exericio.vcxproj.filters  Origem.cpp  result.md
M3_OBJ/: M3_OBJ.sln
M3_OBJ/Exericio/: Exericio.vcxproj  Exericio.vcxproj.filters  Origem.cpp  result.md
M3_OBJ/shaders_archives/: Shader.vs
M4_Phong/: M4_Phong.sln
M4_Phong/Exericio/: Exericio.vcxproj  Origem.cpp  Result.md  Shader.h
M4_Phong/shaders_archives/: Shader.vs
M5_Camera/Exericio/: Camera.h  Exericio.vcxproj  Exericio.vcxproj.filters  Origem.cpp  Result.md
M6_CurvasParametricas/: M6_CurvasParametricas.sln
M6_CurvasParametricas/Exericio/: Bezier.cpp  Curve.cpp  Exericio.vcxproj  Exericio.vcxproj.filters  Origem.cpp  Result.md
M6_CurvasParametricas/shaders_archives/: Shader.fs  Shader.vs
dependencies/libconfig/.deps/: libconfig___la-grammar.Plo  libconfig___la-libconfig.Plo  libconfig___la-libconfigcpp.Plo  libconfig___la-scanctx.Plo  libconfig___la-scanner.Plo  libconfig___la-strbuf.Plo  (+11 more)
(+1 files in other folders)
